<resources>
    <string name="app_name">Singhal Enterprise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="ecatalogue">E-Catalogue</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="blog">Blog</string>
    <string name="extra_tag">Please wait while catalogue file is being processed.</string>
    <string name="office_stationary">Office Stationary</string>
    <string name="display_board">Display Board</string>
    <string name="training_and_musketry_store">Training and Musketry Store</string>
    <string name="printing_Services">Printing Services</string>
    <string name="printer_cartridges">Printer Cartridges</string>
    <string name="paper_Shredder">Paper Shredder</string>
    <string name="folder_and_visitor_books">Folder and Visitor Books</string>
    <string name="search_light">Search Light</string>
    <string name="sand_model_set">Sand Model Set</string>
    <string name="rifle_rack">Rifle Rack</string>
    <string name="brass_and_quarter_gaurd_item">Brass &amp; Quarter Guard Items</string>
    <string name="momento_and_trophy">Memento &amp; Trophy</string>
    <string name="home_items">Other Items</string>
    <string name="address">14/22, 1st Floor, RBC, DDA Commercial Complex, Nangal Raya, New Delhi - 110046 (Near State Bank of India)</string>
    <string name="landline_number">	011-2852 6733 / 011-2852 6831</string>
    <string name="mobile_number">8745078610</string>
    <string name="whatsapp_number">9810088657</string>
    <string name="email">info@singhalenterprises.in</string>
    <string name="optional">Or Write Us a mail</string>
    <string name="name_form">Your Name (Required)</string>
    <string name="email_form">Your email (Required)</string>
    <string name="subject_form">Subject</string>
    <string name="message_form">Your Message</string>
    <string name="send_form">send mail</string>
    <string name="cyber_security_charts">Cyber Security Charts</string>
    <string name="happy_new_year">Happy New Year</string>
    <string name="merry_chirstmas">Merry Christmas</string>
    <string name="who_we_are">Who we are ???</string>
    <string name="client_satisfaction">Client Satisfaction</string>
    <string name="who_we_are_details">Established in year 1987 at New Delhi, India, we "Singhal Enterprises" are engaged in supplying a comprehensive range of Office Stationery, Targets/Training Stores, Computer Consumables and Display Boards. The offered range includes Visitor Books, Folders, Printer Cartridges and Self Ink Stamps. In addition, we have the expertise to meet the varied demands of printing of Invitation Cards, Calenders, DO Pads and Book Work for various Govt. and Civil Organizations.\n\n
With the help of our robust infrastructure, we ensure that the different requirements of our clients are easily met within a scheduled time. This unit is managed by our team of professionals who enable us to provide high quality range of products to customers. Also, these professionals follow a quality conscious approach and are capable of providing customized solutions. Owing to this, we gain wide appreciation from our reputed clients.\n\n
Led by our mentor Mr. Harish Kumar, we have become prominent in the domain as amongst the leading firms engaged in providing the offered goods and services to our customers. His rich experience and in-depth knowledge has helped us to achieve immense growth and success</string>
    <string name="client_satisfaction_details">We seek to gain utmost satisfaction of our valuable clients. In order to achieve this goal, we endeavor to deliver an outstanding quality range of products at the market leading rates to our clients. Our procuring agents ensure that, we source our products from the leading vendors in the industry, who have good track record of providing quality products and meeting their commitments. Further, our expertise in the domain allows us to meet requirements of standard as well as customized products in bulk quantities. Besides, we have incorporated best practices in supply chain management into our operation to make sure that our clients receive their consignments as per delivery schedule. All these factors have helped us in garnering a valuable clientele.</string>
    <string name="details_os">Our clients can avail a quality range of Stationery Items through us at market leading prices. We do not compromise with quality of products offered, so we procure these products from our reliable and trusted vendors which satisfy our clients in aspect of quality. Our quality range of stationery items includes A4 Size Papers, Folders, Marker Pens and Office Stationeries. We also have warehouse in which we keep our products are ensure on swift delivery of products whenever needs required.</string>
    <string name="details_db">We offer an exclusive range of Display Boards, which come in different types of sizes and designs. Our range is widely used in training departments, colleges, schools, companies and various learning institutions. This facilitates to display the excellent image, text and presentation, these are ideal communicative tools. The various types of Display Boards comprises such as Projector Screen With White board, Notice / Pin-up Boards, Preskograph Board, Lobby Information Boards With Stand.</string>
    <string name="details_tms">We offer training Stores that include an ample range of training products used in various outdoor and indoor areas. These training products include Target Papers, Dragon Lights, Laminated Charts, Sand Model Sets and many others. The training equipment we offer are high in quality and maximum utilization in specific training areas. We are a prominent supplier of Dragon Lights used by defense forces, paramilitary forces, security agencies, police, fire fighters and other industries..</string>
    <string name="details_pc">The comprehensive range of Printer Cartridges we offer are available at affordable prices. We source branded cartridges such as in brands like HP, Cannon, Samsung, Epson, Brother and deliver the same to clients in a timely manner. The Computer Printer Cartridges we Supply are available with a guarantee that will not harm your printe</string>
    <string name="details_psr">A professional organization, we have earned specialization in trading and supplying an extensive range of Personal Shredders. Procured from reputed brands, these are acclaimed for outstanding attributes like optimum performance, highly efficient and longer service life. These are available in varied models that help in meeting the requirements of Offices, Educational Institutes and other such places.</string>
    <string name="details_fvb">We deliver an intricately designed range of Folders &amp; Visitors Books to our clients. Our folders &amp; Visitors books are sourced from the trusted vendors, who manufacture these using best grade raw materials. Further, these are designed in accordance with latest trends in the market. Besides, available in several colors and with many pockets, these products have leather/Glossy finish, which provide it elegant look. Apart from these, we provide customization as per clients requirements (depends on quantity). Due to all these reasons, our Office Folders &amp; Visitors Books are in high demand in Govt. / Corporate sectors.</string>
    <string name="details_sms">These Sand Model Set are very effective, durable and attractive set of model equipments fro training of junior commanders in war games. All these are made of unbrakable plastics in red and Blue Colours. Standard Set Of Models – for sand table exercise containing models like transport vehicle, bridges, weapons and equipments, building, formation sign, bushes and trees, tapes fro rivers, roads, etc. Our Sand Model Sets are available at most competitive price</string>
    <string name="details_rr">Security &amp; Storage of Weapons like rifles has been a concern for ages for the fear of damage, pilferage, extremists, and now terrorism. With the evolution of sophistication of Rifles, Safeguarding &amp; proper Storage has become of prime importance especially in the recent years with a significant rise in terrorism.

Profile suits for .303, 7.62mm SLR/ 5.56mm INSAS Rifles (Fixed Butt), 7.62 mm SLR, AK-47 Rifles (Fixed Butt and Side Folding Butt)/ 5.56mm INSAS Rifles (Folding Butt), AK47 Rifles (Front Folding Butt), 9 mm Carbine, Sten Gun. </string>
    <string name="details_fallback">No information available.</string>
    <string name="pro_os_0">JK Copier Paper\n\n
Type of Product : Copier Paper\n
Paper Size : A4\n
Paper Quality : 75 gsm\n
No of sheets : 500\n
Sheet Color : White</string>
    <string name="pro_os_1">Tumbler (Pencil Container)</string>
    <string name="pro_os_2">Copier Paper\n\n
Type of Product : Copier Paper\n
Sub Type : Star\n
Paper Size : A4\n
Paper Quality : 75 gsm\n
No of sheets : 500</string>
    <string name="pro_os_3_4">Pen Stand (PU)</string>
    <string name="pro_os_5">Pen Stand (PU) with Flag\n
Size : 42 cms c 15 cms (Approx)</string>
    <string name="pro_os_6">We are one of the leading supplier and trader of variety of Jute Conference Folder. They made using the finest quality jute material that we purchase from our most reliable sources.</string>
    <string name="pro_os_7">3D Raised Relief Plastic Maps with Hard Backing, Aluminum Angle Frame with Hanging Hooks\n
India  (75 x 100 cms)\n
World  (75 x 100 cms)\n
Asia (70 x 100 cms)\n
North America (70 x 100 cms)\n
South America (70 x 100 cms)\n
Maps of States (Size 75 x 100 cms)\n
Haryana, Himachal Pradesh, Maharashtra, Orissa, Madhya Pradesh, Jharkhand, Kerla, Assam &amp; Eastern States, Gujrat, Andhra Pradesh, Bihar, Tamil Nadu, Karnataka, Punjab, West Bengal, Chattisgarh, Jharkhand.</string>
    <string name="pro_os_8">Clip Board (Magnetic)\n
Made on Order</string>
    <string name="pro_os_9">Photo Glossy Paper\n
Size – A4\n
Quality – 180 gsm</string>
    <string name="pro_os_10">Jute Folder</string>
    <string name="pro_os_11">Jute Folder LMP-J009</string>
    <string name="pro_os_12">Wooden Pen Stand\n
Model HK244\n
size : 5.5″ x 2.5″ (Approx)\n\n
Wooden Pen Stand\n
Model -PSTF93\n
Size – 9″ x 3″ (Approx)</string>
    <string name="pro_os_13">Wooden Pen – Pencil Tumbler....</string>
    <string name="pro_db_0">White Board</string>
    <string name="pro_db_1">Display Board with Stand</string>
    <string name="pro_db_2">Notice Board with Acrylic Cover\n
Front door covered with Aluminum framed. Acrylic sheet which can be locked with a pair of keys provided with each board.\n
The board is backed with a soft board.\n
Accepts Push Pins, Drawing pins etc.\n
Available in Different colors Blue / Green / Maroon &amp; Red. (On Order)\n
For Indoor use only.\n
Available in standard sizes only</string>
    <string name="pro_db_3">Lobby Stand\n
Display Board Size 2 feet X 3 feet.</string>
    <string name="pro_db_4">Felt Groove Board\n
Superior use in Office,  Hotel reception area.\n
Available in Two velvet color Red and Maroon with Golden frame and corner.\n
Acrylic Covered Felt Grooved Board\n
Front door covered with Aluminum golden anodized framed with Acrylic sheet which can be locked with a pair of keys provided with each board.\n
Available in two velvet color Red and Maroon. </string>
    <string name="pro_db_5">Notice Board</string>
    <string name="pro_db_6">Acrylic Cover Key Boards\n
Convenient lockable key storage system.\n
Acrylic lockable cover.\n
Available in different size for 20, 30, 40, 50, 100 keys.\n
Key chains provided.</string>
</resources>