<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#5153b4"

    android:orientation="vertical"
    tools:context="in.singhalenterprises.singhalenterprise.ProductFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="5sp"
    android:paddingEnd="1sp"
    android:layout_margin="5sp"
    android:background="#ffffff"

    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/office_stationary"
        android:id="@+id/tt1"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tt1"
        android:layout_margin="10dp"
        android:id="@+id/recycler_product"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_below="@id/recycler_product"
        android:layout_marginTop="5dp"
        android:text="@string/display_board"
        android:id="@+id/tt2"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_display_board"
        android:layout_below="@id/tt2"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_display_board"
        android:layout_marginTop="5dp"
        android:text="@string/training_and_musketry_store"
        android:id="@+id/tt3"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_training"
        android:layout_below="@id/tt3"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_training"
        android:layout_marginTop="5dp"
        android:text="@string/printing_Services"
        android:id="@+id/tt4"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_printing_services"
        android:layout_below="@id/tt4"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_printing_services"
        android:layout_marginTop="5dp"
        android:text="@string/printer_cartridges"
        android:id="@+id/tt5"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_printing_cartridge"
        android:layout_below="@id/tt5"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_printing_cartridge"
        android:layout_marginTop="5dp"
        android:text="@string/paper_Shredder"
        android:id="@+id/tt6"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_paper_shredder"
        android:layout_below="@id/tt6"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_paper_shredder"
        android:layout_marginTop="5dp"
        android:text="@string/folder_and_visitor_books"
        android:id="@+id/tt7"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_folder_visitor_book"
        android:layout_below="@id/tt7"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_folder_visitor_book"
        android:layout_marginTop="5dp"
        android:text="@string/search_light"
        android:id="@+id/tt8"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_search_light"
        android:layout_below="@id/tt8"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_search_light"
        android:layout_marginTop="5dp"
        android:text="@string/sand_model_set"
        android:id="@+id/tt9"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_sand_model_set"
        android:layout_below="@id/tt9"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_sand_model_set"
        android:layout_marginTop="5dp"
        android:text="@string/rifle_rack"
        android:id="@+id/tt10"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_rifle_rack"
        android:layout_below="@id/tt10"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_rifle_rack"
        android:layout_marginTop="5dp"
        android:text="@string/brass_and_quarter_gaurd_item"
        android:id="@+id/tt11"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_brass"
        android:layout_below="@id/tt11"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/recycler_brass"
        android:layout_marginTop="5dp"
        android:text="@string/momento_and_trophy"
        android:id="@+id/tt12"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_trophy"
        android:layout_below="@id/tt12"
        android:layout_margin="10dp"/>

</RelativeLayout>
</ScrollView>