<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.singhalenterprises.singhalenterprise.ContactFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#5153b4"
    android:orientation="vertical"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_margin="5sp"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_location"
        android:layout_marginTop="45dp"
        android:id="@+id/location_contact"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/location_contact"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/address"
        android:id="@+id/addr_text"
        android:textSize="18dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addr_text"
        android:src="@drawable/ic_call"
        android:layout_marginTop="20dp"
        android:id="@+id/call_contact"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/landlline"
        android:layout_below="@id/addr_text"
        android:textSize="20dp"
        android:autoLink="phone"
        android:paddingStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/landline_number"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mobile_contact"
        android:layout_below="@id/landlline"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_phone"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_below="@id/landlline"
        android:layout_marginTop="20dp"
        android:paddingStart="50dp"
        android:text="@string/mobile_number"
        android:id="@+id/mobile"
        android:autoLink="phone"/>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"

        android:src="@drawable/whatsapp_logo"
        android:layout_below="@id/mobile"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:textSize="20dp"
        android:id="@+id/whatsapp_img"
        android:text="@string/whatsapp_number"
        android:paddingLeft="50dp"
        android:layout_marginTop="20dp"
        android:autoLink="phone"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/whatsapp_img"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:id="@+id/email_contact"
        android:src="@drawable/ic_mail"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:textSize="20dp"
        android:text="@string/email"
            android:layout_below="@id/whatsapp_img"
        android:layout_marginTop="20dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/email_contact"
        android:layout_marginTop="40dp"
        android:background="#5153b4"/>

</RelativeLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold|italic"
    android:textSize="25dp"
    android:textColor="#333"
    android:layout_marginTop="10dp"
    android:text="@string/optional"
    android:paddingStart="80dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/name_form"
        android:layout_marginTop="10dp"
        android:paddingStart="25dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textSize="16dp"
        android:id="@+id/edit_name_form"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edittext"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/subject_form"
        android:layout_marginTop="10dp"
        android:paddingStart="25dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:id="@+id/edit_subject_form"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edittext"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/message_form"
        android:layout_marginTop="10dp"
        android:paddingStart="25dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/edit_message_form"
        android:layout_marginTop="5dp"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edittext"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/send_form"
        android:textColor="@color/colorPrimary"
        android:background="#ffffff"
        android:layout_margin="10sp"
        android:id="@+id/button_send_form"
        android:layout_marginTop="20dp"
        />

</LinearLayout>

</ScrollView>